# torch-pyrescue

./: .gitignore  README.md  main.py  pyproject.toml
src/pyrescue/: config.py  logger.py  monitor.py  state_manager.py
src/pyrescue/hooks/: forward_hooks.py
src/pyrescue/logger/: logger.py  logger_config.json  logger_setup.py
src/pyrescue/utils/: config_loader.py
tests/: test_hooks.py
