[project]
name = "pyrescue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.0",
    "torch>=2.8.0",
]

[[tool.uv.index]]
name = "testpyrescue"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
